--- a/net/templates/friends_widget.html
+++ b/net/templates/friends_widget.html
@@ -1,12 +1,13 @@
 {% load thumbnail i18n %}
-			{% if widgets.friends.friends_count %}
+		
 			<div class="b-block b-friends">
+					{% if widgets.friends.friends_count %}
 				<h1 class="header">{% trans "Друзья" %}	
                     {% if widgets.profile and widgets.friends.friends_count %} 
                         (<a  href="{% url list_friends widgets.profile.pk %}">{{ widgets.friends.friends_count}}</a>)  
                     {% endif %}
                 </h1>
-                {% if widgets.friends.friends_count %}
+              
                     {% for friend in widgets.friends.friends_list %}
                         <div class="b-friend-thumbnail" > 
 							{% if friend.avatar %}
@@ -18,7 +19,12 @@
                         </div>
                     {% endfor %}
                 {% else %}
+					{% ifequal profile.user.pk request.user.pk %}
                     {% trans "У вас нет друзей, попробуйте их найти" %}
+					{% else %}
+					 <h2 class="header">У пользователя нет друзей, но его <a href="{% url change_friend profile.pk 1 %}">{% trans "можно добавить" %}</a></h2>
+					{% endifequal %}
 				{% endif %}
+				
 			</div>
-			{% endif %}
+		
