--- a/media/css/base.css
+++ b/media/css/base.css
@@ -269,7 +269,7 @@ table td {
 .b-friends {
   	width: 100%;
 
-	height: 160px;
+
 }
 .b-friend-thumbnail {
     margin: 5px 5px 5px 10px;
@@ -344,4 +344,7 @@ table td {
 }
 .comments-form  .submit-post {
     margin-top: 10px;
+}
+#write-smth {
+    display: none;
 }
