--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -20,6 +20,7 @@
 	        {% endblock head %}
 		<script type="text/javascript">
 			$(function(){
+		
 				$('.wrote-smth').click(function(){
 				var _t = this;
 				    
@@ -32,8 +33,12 @@
 				    	overlay: { 
 				        	opacity: 0.5, 
 				        	background: "black" 
+						},
+						close: function(){
+							$('#write-smth').remove();		
 						}
 					});
+					$('#write-smth').show();
 				});
 				
 			
