--- a/net/templates/wall_widget.html
+++ b/net/templates/wall_widget.html
@@ -21,6 +21,7 @@
      {% endif %}
  </div>
 	{% else %}
+	{% ifequal profile.user.pk request.user.pk %}
 	<h1 class="header">{% trans "Стена пуста" %}</h1>
 	<p>
 	    <a href="{% url user_search %}">Найдите друзей, и они вам что-нибудь напишут</a> 
@@ -29,6 +30,9 @@
 	    {% trans "попробуйте сами" %}
         </a>
     </p>
+{% else %}
+	<h1 class="header"><a href="{% url create_pm profile.pk %}"  class="wrote-smth">{% trans "Написать на стене пользователя" %}</a></h1>
+{% endifequal %}
 	{% endif %}
  </div>  
       
