--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -8,6 +8,7 @@
                     {% include "messages_widget.html" %}
                     {% include "wall_widget.html" %}
                     {% include "ads_widget.html" %}			
+                    {% include "events_widget.html" %}
                 </div>
                 <div class="b-right-column">
                     {% include "friends_widget.html" %}
