--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -59,7 +59,9 @@
 		<div class="min-width">&nbsp;</div>
             <div class="b-head">
                 <div class="b-menu">
-                    <a href="{% url my_profile %}">Люди</a> <a href="{% url groups_list %}">Группы</a> <a href="#">RTTV</a>
+                    <a href="{% url my_profile %}">Люди</a> 
+                    <a href="{% url groups_list %}">Группы</a> 
+                    <a href="#">RTTV</a>
                 </div>
 				<div class="b-head-right">
 						 {% if user.is_authenticated %}
