--- a/net/templates/message_header.html
+++ b/net/templates/message_header.html
@@ -1,7 +1,12 @@
 {% load thumbnail i18n %}
 		 <div class="b-message-header">
 	         <img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left">
-	         <h3>	        
+						   {% if msg.private %}
+					        {% trans "личное сообщение" %}
+					        {% else %}
+					        {% trans "запись на стену" %}
+					        {% endif %}         
+	<h3>	        
             {% ifequal msg.from_user user.user %}
                 {% trans "Для:" %} 
                 <a href="{{ msg.get_address.get_absolute_url }}">
