--- a/net/templates/messages_widget.html
+++ b/net/templates/messages_widget.html
@@ -7,7 +7,23 @@
 
     {% for msg in widgets.messages %}
     <div class="b-message">
-        {% include "message_header.html" %}
+        	 <div class="b-message-header">
+		         <img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left">
+							        
+		<h3>	        
+	            {% ifequal msg.from_user user.user %}
+	                {% trans "Для:" %} 
+	                <a href="{{ msg.get_address.get_absolute_url }}">
+	                    {{ msg.get_address.get_name }}
+	                </a>
+	            {% else %}
+	                {% trans "От:" %} 
+	                <a href="{{ msg.from_user.get_absolute_url }}">
+	                    {{ msg.from_user.get_name }}
+	                </a>
+	            {% endifequal %} 
+	            :
+	            </h3></div>
         <p>{{ msg.body }}</p>
     </div>
     {% endfor %}
@@ -22,7 +38,7 @@
                 </a>
             {% endif %}
             {% ifnotequal msg_type "all" %}
-                <a href="{% url my_history %}">
+                <a class="wrote-smth-btn" href="{% url my_history %}">
                    {% blocktrans %}История моих сообщений{% endblocktrans %}
                 </a>
             {% endifnotequal %}
