--- a/net/templates/friends_widget.html
+++ b/net/templates/friends_widget.html
@@ -1,6 +1,10 @@
 {% load thumbnail i18n %}
 		
 			<div class="b-block b-friends">
+				<div class="corner-left"></div>
+				<div class="corner-right"></div>
+					<div class="corner-left bottom"></div>
+					<div class="corner-right bottom"></div>
                 {% if widgets.friends.friends_count %}
                     <h1 class="header">{% trans "Друзья" %}	
                         {% if widgets.profile and widgets.friends.friends_count %} 
