--- a/net/templates/photos_widget.html
+++ b/net/templates/photos_widget.html
@@ -1,7 +1,10 @@
 {% load thumbnail i18n %}
 {% if widgets.photos %}
 	<div class="b-block b-photos">
-		
+					<div class="corner-left"></div>
+					<div class="corner-right"></div>
+						<div class="corner-left bottom"></div>
+						<div class="corner-right bottom"></div>
 		<h1 class="header">
 			{% trans "Фотографии" %}
 			{% if widgets.photos.photos_count %} 
