--- a/net/templates/wall_widget.html
+++ b/net/templates/wall_widget.html
@@ -1,5 +1,9 @@
 {% load thumbnail i18n %}
 <div class="b-block b-wall">
+		<div class="corner-left"></div>
+		<div class="corner-right"></div>
+			<div class="corner-left bottom"></div>
+			<div class="corner-right bottom"></div>
 	{% if widgets.wall %}
  <h1 class="header">{% trans "Стена" %}</h1>
 
