--- a/net/templates/ads_widget.html
+++ b/net/templates/ads_widget.html
@@ -1,6 +1,10 @@
 {% load thumbnail i18n %} 
  {% if widgets.blog.ads %} 
 <div class="b-block b-wall">
+				<div class="corner-left"></div>
+				<div class="corner-right"></div>
+					<div class="corner-left bottom"></div>
+					<div class="corner-right bottom"></div>
    <h1 class="header">{% trans "Обьявления" %}</h1>
 
     {% for ad in widgets.blog.ads %}
@@ -24,6 +28,10 @@
 	{% else %}
 	{% ifequal profile.user.pk request.user.pk %}
 	<div class="b-block b-wall">
+			<div class="corner-left"></div>
+			<div class="corner-right"></div>
+				<div class="corner-left bottom"></div>
+				<div class="corner-right bottom"></div>
 	<h1 class="header">
 	У вас нет обьявлений, <a href="{% url post_add %}" class="wrote-smth">добавьте</a>
 	</h1>
