--- a/media/css/personal_info.css
+++ b/media/css/personal_info.css
@@ -6,7 +6,10 @@
     
 }
 .b-userpic {
-    width: 200px;
+   width: 282px;
+    padding: 20px 30px 20px 20px;
+    text-align: center;
+    background: url('/i/img/avatar_bg.jpg');
 }
 
 .username { 
