--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -77,7 +77,11 @@
 			</div>
 			<div class="b-head">
 				<div class="b-menu">
-				<a href="{% url user_profile profile.pk %}">{% trans "Я" %}</a><a href="{% url my_profile %}">Люди</a> <a href="{% url groups_list %}">Группы</a> <a href="#">RTTV</a>
+				{% if request.user.is_authenticated %}
+				    <a href="{% url user_profile request.user.user.pk %}">{% trans "Я" %}</a>
+				    <a href="{% url my_profile %}">Люди</a> 
+				{% endif %}
+				<a href="{% url groups_list %}">Группы</a> <a href="#">RTTV</a>
 				</div>
 				<div class="b-head-right">
 					{% if user.is_authenticated %} <a class="b-logout-btn" href="{% url auth_logout %}">{% trans "Выйти" %}</a> {% endif %}
